Changed Process Builder Conventiosn
to match new release notes

--- a/article-convpb.html
+++ b/article-convpb.html
@@ -83,71 +83,95 @@
                </div>
             </header>
             <div class="page-main">
-<p>All Naming Conventions Are <a href="https://www.ietf.org/rfc/rfc2119.txt">RFC 2119</a> and <a href="https://tools.ietf.org/html/rfc6919">RFC 6919</a> compliant.</p>
-<h4 id="general-conventions">General Conventions</h4>
+              <h1><a id="Process_Builder_Conventions_0"></a>Process Builder Conventions</h1>
+<p>All Naming Conventions Are &lt;a href="<a href="https://www.ietf.org/rfc/rfc2119.txt">https://www.ietf.org/rfc/rfc2119.txt</a>“&gt;RFC 2119&lt;/a&gt; and &lt;a href=”<a href="https://tools.ietf.org/html/rfc6919">https://tools.ietf.org/html/rfc6919</a>"&gt;RFC 6919&lt;/a&gt; compliant.</p>
+<h2><a id="General_Conventions_4"></a>General Conventions</h2>
 <ol>
-<li>If there are APEX triggers firing on an object, Process Builder <strong><em>SHOULD NOT</em></strong> be used. <em>\\</em>1*</li>
+<li>If there are APEX triggers firing on an object, Process Builder <strong><em>SHOULD NOT</em></strong> be used. <em>*1</em></li>
 <li>If Process Builders existed before building the APEX triggers, the Process Builders <strong><em>SHOULD</em></strong> be replaced by APEX triggers and classes.</li>
 <li>Process Builders <strong><em>REALLY SHOULD NOT</em></strong> fire on, update, or otherwise reference, Person Accounts.</li>
 <li>Process Builders <strong><em>REALLY SHOULD NOT</em></strong> perform complex operations on records that can be massively inserted/updated as a routine part of organization usage.</li>
 <li>Process Builders <strong><em>MUST NOT</em></strong> call a Flow if firing on an object that can be massively inserted/updated as a routine part of organization usage.</li>
-<li>Process Builders execution <strong><em>SHOULD</em></strong> be limited to the exact cases where they are needed. <em>\\</em>2*. In all cases, a consultant <strong><em>SHOULD</em></strong> limit the number of process builders executing on an object.</li>
+<li>Process Builders execution <strong><em>SHOULD</em></strong> be limited to the exact cases where they are needed. <em>*2</em>. In all cases, a consultant <strong><em>SHOULD</em></strong> limit the number of process builders executing on an object.</li>
 </ol>
-<h4 id="structural-conventions">Structural Conventions</h4>
+<h2><a id="Structural_Conventions_14"></a>Structural Conventions</h2>
 <ol>
-<li>Generally, a consultant <strong><em>SHOULD</em></strong> build Invocable Process Builders, and Invoke them from one single Process on the trigerring Object. This is by opposition to creating one process builder by task.</li>
-<li>Process Builders generally <strong><em>SHOULD NOT</em></strong> use the "no criteria" option of the Decision Diamonds.</li>
-<li>Whenever possible, multiple Process Builders on an object should be migrated to a single Process Builder, with different actions evaluated one after the other. </li>
+<li>Generally, a consultant <strong><em>SHOULD</em></strong> build Invocable Process Builders, and Invoke them from one single Process on the trigerring Object.
+<ul>
+<li>This is by opposition to creating one process builder by task.</li>
+<li>Invokable process builders cannot be used to trigger time-dependent actions.</li>
+</ul>
+</li>
+<li>Process Builders generally <strong><em>SHOULD NOT</em></strong> use the “no criteria” option of the Decision Diamonds.</li>
+<li>Whenever possible, multiple Process Builders on an object should be migrated to a single Process Builder, with different actions evaluated one after the other. This is now officially mandated by Salesforce.</li>
 </ol>
-<h4 id="naming-conventions">Naming Conventions</h4>
+<h2><a id="Naming_Conventions_22"></a>Naming Conventions</h2>
 <ol>
-<li>A Process Builder <strong><em>SHALL</em></strong> always start by <code>PB</code>, followed by a number corresponding to the number of process builders in the Organization, followed by an underscore.</li>
-<li>A Process Builder<strong><em>SHOULD</em></strong> contain either <code>C</code>, <code>CE</code>, or <code>CES</code> wrapped by underscores, to show if the Workflow triggers on Creation, Creation and Edition, or Subsequent Modifications that Fill Criteria. The default assumed setting is <code>CE</code> if none is written. <em>\\</em>3*</li>
-<li>In case the Process Builder invokes other processes, the Process Builder name <strong>MUST</strong>contain <code>Inv</code> wrapped by underscore, and try to explain in a concise manner what triggers the PB.</li>
-<li>In case the Process Builder Carries out actions independently, the Process Builder name <strong>MUST</strong> try to explain in a concise manner what actions are carried out in the PB.</li>
-<li>AllProcess Builder Triggers MUST have a description detailing their purpose.</li>
+<li>A Process Builder name <strong><em>SHALL</em></strong> always start by <code>PB</code>, followed by a number corresponding to the number of process builders in the Organization, followed by an underscore.<br>
+a. If the Process Builder Triggers  other Process Builders, it <strong><em>SHALL</em></strong> always start by <code>TPB</code> instead.<br>
+b. If the Process Builder is Invoked by other Process Builders, it <strong><em>SHALL</em></strong> always start by <code>IPB</code> instead.</li>
+<li>The end of a Process Builder name <strong><em>SHOULD</em></strong> always be:
+<ul>
+<li>the name of the object, in the case of a Triggering Process Builder (TPB)</li>
+<li>the action carried out, in the case of an Invoked Process Builder (IPB)</li>
+<li>the trigger and action, in the cas of a standalone Process Builder (PB)</li>
+</ul>
+</li>
+<li>A Process Builder name <strong><em>COULD</em></strong> contain either <code>C</code>, <code>CE</code>, or <code>CES</code> wrapped by underscores, to show if the PB triggers on Creation, Creation and Edition, or Subsequent Modifications that Fill Criteria. The default assumed setting is <code>CE</code> if none is written. <em>*3</em></li>
+<li>All Process Builder Triggers MUST have a description detailing their purpose.</li>
 <li>A Process Builder Decision Diamond <strong><em>SHALL</em></strong> be named after the criteria that are used in the most precise manner possible.</li>
 <li>A Process Builder Action <strong><em>SHALL</em></strong> be named after the action being carried out in the most precise manner possible.</li>
 </ol>
-  <table>
-  <thead>
-  <tr>
-  <th>Type</th>
-  <th>Name</th>
-  <th>Description</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-  <td>Process Builder</td>
-  <td>PB01_CE_Inv_Opportunity</td>
-  <td>This Process Builder invokes all invocable Opportunity Process builders</td>
-  </tr>
-  <tr>
-  <td>Process Builder</td>
-  <td>PB01_UpdateOpportunityAcccount</td>
-  <td>Invocable. Sets the account based on defined rules via a Flow.</td>
-  </tr>
-  <tr>
-  <td>Decision Diamond</td>
-  <td>Status is "Approved"</td>
-  <td>#N/A</td>
-  </tr>
-  <tr>
-  <td>Action</td>
-  <td>Sets Contact Scoring to 10</td>
-  <td>#N/A</td>
-  </tr>
-  </tbody>
-  </table>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Type</th>
+<th>Name</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Process Builder</td>
+<td>TPB01_Opportunity</td>
+<td>This Process Builder invokes all invocable Opportunity Process builders</td>
+</tr>
+<tr>
+<td>Process Builder</td>
+<td>IPB01_SetOwnerTarget</td>
+<td>Copies over target from Owner to calculate monthly efficiency</td>
+</tr>
+<tr>
+<td>Process Builder</td>
+<td>PB01_ContactBirthdatEmail</td>
+<td>Sends a birthday email on the contact’s birthday.</td>
+</tr>
+<tr>
+<td>Decision Diamond</td>
+<td>Status is “Approved”</td>
+<td>#N/A</td>
+</tr>
+<tr>
+<td>Action</td>
+<td>Sets Contact Scoring to 10</td>
+<td>#N/A</td>
+</tr>
+<tr>
+<td>Process Builder (possible variation)</td>
+<td>TPB01_Opportunity</td>
+<td>This Process Builder invokes all invocable Opportunity Process builders. Also Handles various actions such as birthday emails.</td>
+</tr>
+</tbody>
+</table>
+<blockquote>
+<p><em>*1 This is a best practice, but it should be noted that for smaller organizations, triggers and process builders may coexist on the same objects…</em><br>
+<em>*2 Note that contrary to Workflows and Validation Rules, you cannot add a bypass to a Process Builders, as you cannot target User fields on decisions. As sucj, limiting the scope of execution of the process builder is paramount…</em><br>
+<em>*3 This is the default setting for Process Builders. To activate CES, one must click on “advanced” on the Decision diamond.</em></p>
+</blockquote>
 
 
-  <BR/><BR/>
-  <blockquote>
-  <p><em>\</em>1 This is a best practice, but it should be noted that for smaller organizations, triggers and process builders may coexist on the same objects..*
-  <em>\</em>2 Note that contrary to Workflows and Validation Rules, you cannot add a bypass to a Process Builders, as you cannot target User fields on decisions. As sucj, limiting the scope of execution of the process builder is paramount..*
-  <em>\</em>3 This is the default setting for Process Builders. To activate CES, one must click on "advanced" on the Decision diamond.*</p>
-</blockquote></div></div>
+
+            </div></div>
 
         </div>
       </div><!-- /#content -->
