Add Ezra Kenigsberg's tool list to the homepage.

--- a/wiki-index.html
+++ b/wiki-index.html
@@ -143,6 +143,7 @@
                 <li><i class="fas fa-globe"></i> <a href="content/SF_OrderOfExecution.pdf">Salesforce Order of Execution - by @Alexdot </a></li>
                 <li><i class="fas fa-globe"></i> <a href="https://developer.salesforce.com/page/Architect_Core_Resources">Official Salesforce Architect Resources</a></li>
                 <li><i class="fas fa-globe"></i> <a href="https://sites.google.com/view/flowunofficial">Flow Unofficial Resources by Alex Edelstein, including premade components and tutorials</a></li>
+                <li><i class="fas fa-globe"></i> <a href="https://sites.google.com/site/ezrakenigsberg/">Tools and Tips for Salesforce Data Geeks by Ezra Kenigsberg</a></li>
               </ul>
             </div>
 
