uhhh update yeah

--- a/article-winter19.html
+++ b/article-winter19.html
@@ -93,7 +93,7 @@ May contain nuts</p>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_sales_sf_eosale.htm">Salesforce For Outlook is slowly being retired</a> and <a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_sales_sfo_bug_fixes_3.4.3.htm">no future patches are planned</a>. All admins should schedule a migration to Outlook Integration or Lightning Sync ASAP.</li>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_pds_field_history_tracking_deletion.htm">Salesforce will now enforce the 18-month retention policy for history tracking data</a>. This limit was previously unenforced. If you report on older data, act now to preserve it.</li>
 </ul>
-<p><strong>THANK FUCKING GOD</strong></p>
+<p><strong>THANK GOD</strong></p>
 <ul>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_lex_display_density.htm">YOU CAN CHANGE DENSITY SETTINGS IN LEX</a> looking at a record page is no longer a russian winter snow simulation</li>
 <li>You can finally <a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_lex_change_owner.htm">change multiple owners in Lightning</a>. 2 years after the LEX Launch, they’ve decided it was time to add one button to rule them all.</li>
