Uuuuuuuuuuuh we update more stuff

--- a/article-winter19.html
+++ b/article-winter19.html
@@ -152,7 +152,7 @@ May contain nuts</p>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_console_customize_tabs.htm">Why ?</a></li>
 <li>Email Opens now tracked in the <a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_sales_productivity_email_tracking.htm">Activity timeline</a> of records. Nice.</li>
 <li>You can <a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_sales_productivity_calendar_event_series.htm">schedule recurring events</a> but it’s still in beta. Small Indie Companies can’t reinvent everything, recurring events are hard…</li>
-<li><a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_forcecom_lab_comp_visibility_by_userperm.htm">Filter Component Visibility via Permissions</a> This is actually REALLY GODDAMN AWESOME.</li>
+<li><a href="https://releasenotes.docs.salesforce.com/en-us/winter19/release-notes/rn_forcecom_lab_comp_visibility_by_userperm.htm">Filter Component Visibility via Permissions</a> This is actually REALLY AWESOME.</li>
 </ul>
 <p><strong>DEV</strong></p>
 <ul>
