--- a/article-regex.html
+++ b/article-regex.html
@@ -91,12 +91,12 @@
   Note that for the <code>.profile</code> to contain the field permissions, you will have to query both at the same time. This is because the metadata API only gives permissions tied to what you are currently requesting - which also explains some changeset behaviour when deploying profiles.<br/>
 </p>
 
-<p> Replace <code>YOUROBJECTNAMEHER</code> byt the name of the object you want to set the permissions for.
+<p> Replace <code>YOUROBJECTNAMEHERE</code> byt the name of the object you want to set the permissions for.
   This regex finds permissions for all Custom fields on that object and sets them to TRUE/TRUE (editable, writable).
 <br/>
   If you wish to replace permissions accross all custom objects for example, simply replace <code>YOUROBJECTNAMEHERE</code> by <code>.*__c</code></p>
 <h4> Find:</h4>
-<code> %28%3CfieldPermissions%3E%5Cs%2A%3Ceditable%3E%29.%2A%28%3C%2Feditable%3E%5Cs%2A%3Cfield%3EYOUROBJECTNAMEHERE.%2A__c%3C%2Ffield%3E%5Cs%2A%3Creadable%3E%29.%2A%28%3C%2Freadable%3E%5Cs%2A%3C%2FfieldPermissions%3E%29</code>
+<code>  (&lt;fieldPermissions>\s*&lt;editable>).*(&lt;/editable>\s*&lt;field>YOUROBJECTNAMEHERE.*__c&lt;/field>\s*&lt;readable>).*(&lt;/readable>\s*&lt;/fieldPermissions>) </code>
 <h4> Replace:</h4>
 <code>$1TRUE$2TRUE$3</code>
 
