--- a/wiki-index.html
+++ b/wiki-index.html
@@ -83,6 +83,8 @@
               <ul class="category-posts">    
                 <li><i class="fab fa-blogger"></i> <a href="article-feeds.html">Blogs list</a></li>
                 <li><i class="fas fa-book"></i> <a href="article-basic.html">Discord server basic info</a></li>
+                <li><i class="fab fa-youtube"></i> <a href="https://youtu.be/G45V0AMg_r8" target="_blank">SFXD's Dreamforce 18 presentation</a></li>
+                <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/company/sfxd/">SFXD on LinkedIn</a></li>
               </ul>
             </div>
             <div class="span3">
