--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <!-- Hero title -->
         <div class="hero-title">
           <h1>SFXD</h1>
-          <p style="text-align:center">Goes to dreamforce <br/>
-            yeah really <br/>
-          We're presenting a theater session there</p>
+          <p style="text-align:center; color: white;">Went to dreamforce <br/>
+          <br/>
+          We presented a theater session there !</p>
         </div>
         <!-- Hero boxes -->
         <div class="row boxes">
