--- a/article-spring19.html
+++ b/article-spring19.html
@@ -205,6 +205,7 @@ Most features now are LEX-only and LEX will be activated for everyone in one yea
 <hr>
 <p>This abridged version was graciously written up by the <strong>SF Discord</strong> <a href="https://discord.gg/JG4Bc4q">https://discord.gg/JG4Bc4q</a><br>
 We have a website where we host best practices and other resources: <a href="https://sfxd.github.io">https://sfxd.github.io</a></p>
+<p>And we're also present on LinkedIn, where we post these release notes: <a href="https://www.linkedin.com/company/sfxd/">https://www.linkedin.com/company/sfxd/</a></p>
 
 
             </div>
