Changed List View part
Liked ryan' s versionbetter

--- a/article-spring19.html
+++ b/article-spring19.html
@@ -108,7 +108,7 @@ As Exciting as the new Samsung WV9900 release</p>
 </ul>
 <p><strong>GENERAL STUFF</strong></p>
 <ul>
-<li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_lex_pinned_lists.htm">You can pin lists now</a>. Seems small until you remember that EVERY SINGLE USER that uses lightning currently goes to an object page, waits for it to load (and gets a coffee in the meantime), then clicks on the list and waits for it to load AGAIN. Now it's just "click object". It's AWESOME.</li>
+<li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_lex_pinned_lists.htm">You can pin List Views now</a>. FINALLY users can go to an object page and view directly what they need without an extra click and waiting for LEX to load over the course of a coffee being served! ... Except there's no way to set the default Pinned Lists as an Admin, and so your users will need to know this new feature exists. And do it themselves. For each object. Almost got it Salesforce... ALMOST.</li>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_sandboxes_cloning_ga.htm">Cloning Sandboxes</a> is now available for everyone.</li>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_sales_gmail_integration_parent.htm">Gmail integration</a> now much better and actually saves you time.</li>
 <li>We called it last time, but if <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_sales_sfo.htm">this doesn’t convince you</a> we can’t help you. Salesforce For Outlook will VERY PROBABLY be deprecated in future releases. Consider migrating to a cloud based solution.</li>
