changed category for process tests

--- a/article-spring19.html
+++ b/article-spring19.html
@@ -176,7 +176,6 @@ Like literal tons.</p>
 <li>The <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_console_new_js_api.htm">LEX Console API</a> is now at parity with the standard console API</li>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_networks_navigationchanges.htm">Communities now support lightning-navigation</a>, which helps you avoid broken navigation if Salesforce changes URL formats in the future.</li>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_networks_lccavailable.htm">Lightning Container Components</a> (Yo salesforce, might want to fire the person naming these things - confusing much?) allows you to <a href="https://developer.salesforce.com/docs/atlas.en-us.218.0.lightning.meta/lightning/container_overview.htm">embed React, AngularJs, or whatever</a> other component in communities.</li>
-<li>Tests can now test process <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_forcecom_flow_test_async.htm">Scheduled Actions and Resume Events</a>. “Declarative stuff done by an admin” but testing is done in code, shit never goan get used ayy lmao</li>
 <li>You can <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_security_certificate_based_auth.htm">auth users via a cert</a></li>
 <li>New way to <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_apex_select_with_security_enforced.htm">Enforce FLS in SOQL Queries</a> (beta)</li>
 </ul>
@@ -191,6 +190,7 @@ Like literal tons.</p>
 <li>Remember the Cloud Scheduler, where you could offer appointment slots ? Well <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_general_lt_scheduler.htm">it’s back</a> as Lightning Scheduler. Available if you pay, and only for enterprise and Performance editions. Literally Pay2Win.</li>
 <li>Process Builders now <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_forcecom_flow_create_install_prebuilt_bus_proc.htm">have templates</a>! … Oh wait, no, they added a checkbox in the metadata so you can say “is template”, but the checkbox does nothing. Eh, just ship it, it’s not like your users are used ot using metadata…</li>
 <li>New <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_forcecom_flow_contact_request.htm">Flow Type</a> to let users request help… They literally created a new <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_service_communities_contact_request.htm">object and matching permissions</a> for what is a glorified LiveAgent chat start.</li>
+<li>Tests can now test process <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_forcecom_flow_test_async.htm">Scheduled Actions and Resume Events</a>. “Declarative stuff done by an admin” but testing is done in code, shit never goan get used ayyy lmao</li>
 </ul>
 <p><strong>DIDN’T QUITE MAKE THE CUT</strong></p>
 <ul>
