added business analyst

--- a/article-basic.html
+++ b/article-basic.html
@@ -132,6 +132,7 @@
 
 <li><i class="fas fa-code"></i>  <span class="code"><span style="color:#aa2233">+getrole</span> Architect</span></li>
 <li><i class="fas fa-code"></i>  <span class="code"><span style="color:#aa2233">+getrole</span> Admin</span></li>
+<li><i class="fas fa-code"></i>  <span class="code"><span style="color:#aa2233">+getrole</span> Business Analyst</span></li>
 <li><i class="fas fa-code"></i>  <span class="code"><span style="color:#aa2233">+getrole</span> Commercecloud</span></li>
 <li><i class="fas fa-code"></i>  <span class="code"><span style="color:#aa2233">+getrole</span> Consultant</span></li>
 <li><i class="fas fa-code"></i>  <span class="code"><span style="color:#aa2233">+getrole</span> CPQ</span></li>
