Matched SF updates
removed removed feature Assess Audience Effectiveness with Google Analytics
added two dev features, salesforc eiblling instructions, and lightning converter updated

--- a/article-spring19.html
+++ b/article-spring19.html
@@ -154,7 +154,7 @@ Like literal tons.</p>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_networks_mission_badges.htm">Gamification</a> now available for your users</li>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_networks_custom_lwc.htm">Lightning Web Components</a> are available for communities as well. Don’t know about LWC ? Read the “Critical stuff” section</li>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_networks_deflection_tracking.htm">Inline surveys</a> allow you to see if your community content is any good.</li>
-<li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_networks_aud_google_analytics.htm">Better Google Analytics integration for audiences.</a></li>
+<li><strike><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_networks_aud_google_analytics.htm">Better Google Analytics integration for audiences.</a></strike> Nope, not part of the release anymore...</li>
 <li>Sharing Sets now available for [Accounts, Campaigns, Orders](Use Sharing Sets with Campaigns, Opportunities, and Orders (Generally Available) and <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_networks_sharing_sets_contacts_multiple.htm">Contacts that have multiple accounts</a></li>
 <li>You can track how much a file is <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_networks_file_detail_stats.htm?edition=&amp;impact=">seen and downloaded</a>.</li>
 </ul>
@@ -166,9 +166,10 @@ Like literal tons.</p>
 <li>You can sort <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_sales_productivity_email_templates_organize.htm">LEX Email templates</a> in nested folders now</li>
 <li>Events in LEX caught up to early 1990’s online tools, with <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_sales_productivity_calendar_event_series_ga.htm">recurring events</a>, <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_sales_productivity_calendar_public.htm">public calendars</a>, and… <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_sales_productivity_calendar_related_files.htm">file sharing</a>. Much wow, such feature, nice release.</li>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_knowledge_migration_tool.htm">Lightning Knowledge Migration tool</a> is now GA, meaning it’s easier to get to that new version of Knowledge if you were a previous user in Classic.</li>
+<li><a href="https://resources.docs.salesforce.com/218/latest/en-us/sfdc/pdf/salesforce_spring19_release_notes.pdf#rn_lecc_visualforce"> The Lightning Converter now tries to resolve issues wth your Classic VF Pages, or gives you advice to fix them. yay.</a></li>
 </ul>
 <p><strong>CPQ</strong></p>
-<p>If you use Avalara for Salesforce Billing, do not upgrade to Salesforce Billing Spring ’19. The Avalara package isn’t compatible with any versions of Salesforce Billing Spring ’19. After Avalara addresses this issue, we’ll let you know when it’s OK to upgrade to Salesforce Billing Spring ’19.</p>
+<p>If you use Avalara for Salesforce Billing, do not upgrade to Salesforce Billing Spring ’19 without following <a href="https://resources.docs.salesforce.com/218/latest/en-us/sfdc/pdf/salesforce_spring19_release_notes.pdf#rn_sales_billing_s19_pre_install"> these instructions </a>.</p>
 <ul>
 <li>You can now <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_sales_cpq_other_changes_download_docpdf.htm">Download Quote PDFs</a> from the quote preview page.</li>
 </ul>
@@ -186,6 +187,8 @@ Like literal tons.</p>
 <li><a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_networks_lccavailable.htm">Lightning Container Components</a> (Yo salesforce, might want to fire the person naming these things - confusing much?) allows you to <a href="https://developer.salesforce.com/docs/atlas.en-us.218.0.lightning.meta/lightning/container_overview.htm">embed React, AngularJs, or whatever</a> other component in communities.</li>
 <li>You can <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_security_certificate_based_auth.htm">auth users via a cert</a></li>
 <li>New way to <a href="https://releasenotes.docs.salesforce.com/en-us/spring19/release-notes/rn_apex_select_with_security_enforced.htm">Enforce FLS in SOQL Queries</a> (beta)</li>
+<li> Visualforce View State Limit <a href ="https://developer.salesforce.com/docs/atlas.en-us.218.0.salesforce_visualforce_best_practices.meta/salesforce_visualforce_best_practices/pages_best_practices_perf_code_view_state.htm">increased to 170KB from 135 KB</a></li>
+<li><a href ="https://resources.docs.salesforce.com/218/latest/en-us/sfdc/pdf/salesforce_spring19_release_notes.pdf#rn_vscode_apex_refactor_rename">VSC now allows you to rename symbols</a></li>
 </ul>
 <p><strong>BUGFIXES</strong></p>
 <ul>
