--- a/AbridgedReleaseNotes/article-winter19.html
+++ b/AbridgedReleaseNotes/article-winter19.html
@@ -8,26 +8,26 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="../assets/css/bootstrap.css" rel="stylesheet">
+    <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="../assets/css/style.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="assets/js/html5shiv.js"></script>
+      <script src="../assets/js/html5shiv.js"></script>
     <![endif]-->
 
     <!-- Fav and touch icons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/ico/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/ico/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/ico/favicon-16x16.png">
-<link rel="manifest" href="/assets/ico/site.webmanifest">
-<link rel="mask-icon" href="/assets/ico/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="/assets/ico/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/../assets/ico/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/../assets/ico/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/../assets/ico/favicon-16x16.png">
+<link rel="manifest" href="/../assets/ico/site.webmanifest">
+<link rel="mask-icon" href="/../assets/ico/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/../assets/ico/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="/assets/ico/browserconfig.xml">
+<meta name="msapplication-config" content="/../assets/ico/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
   </head>
 
@@ -41,13 +41,13 @@
       <div class="navbar-inner">
         <div class="container">
 
-          <a class="brand" href="index.html"><img src="assets/img/logo.png" width=70px></a>
+          <a class="brand" href="../index.html"><img src="../assets/img/logo.png" width=70px></a>
 
           <!-- Responsive Navbar -->
           <div id="nav-main">
             <ul id="menu" class="nav">
-              <li><a href="index.html">Home</a></li>
-              <li class="active"><a href="wiki-index.html">Knowledge Base</a></li>
+              <li><a href="../index.html">Home</a></li>
+              <li class="active"><a href="../wiki-index.html">Knowledge Base</a></li>
               <li><a href="faq.html">Faq</a></li>
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
             </ul>
@@ -193,12 +193,12 @@ We have a “website” now: <a href="https://sfxd.github.io/">https://sfxd.gith
             <ul>
               <li class="social-icon discord">
                 <a class="fade-img" href="http://discord.gg" target="_blank" rel="tooltip" title="Discord">
-                  <img src="assets/img/social/icons_discord.png" alt="Discord" />
+                  <img src="../assets/img/social/icons_discord.png" alt="Discord" />
                 </a>
               </li>
               <li class="social-icon salesforce">
                 <a class="fade-img" href="http://www.salesforce.com" target="_blank" rel="tooltip" title="Salesforce">
-                  <img src="assets/img/social/icons_salesforce.png" alt="Salesforce" />
+                  <img src="../assets/img/social/icons_salesforce.png" alt="Salesforce" />
                 </a>
               </li>
             </ul>
@@ -211,23 +211,23 @@ We have a “website” now: <a href="https://sfxd.github.io/">https://sfxd.gith
     <!-- Javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap-transition.js"></script>
-    <script src="assets/js/bootstrap-alert.js"></script>
-    <script src="assets/js/bootstrap-modal.js"></script>
-    <script src="assets/js/bootstrap-dropdown.js"></script>
-    <script src="assets/js/bootstrap-tab.js"></script>
-    <script src="assets/js/bootstrap-tooltip.js"></script>
-    <script src="assets/js/bootstrap-popover.js"></script>
-    <script src="assets/js/bootstrap-button.js"></script>
-    <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script>
+    <script src="../assets/js/jquery.js"></script>
+    <script src="../assets/js/bootstrap-transition.js"></script>
+    <script src="../assets/js/bootstrap-alert.js"></script>
+    <script src="../assets/js/bootstrap-modal.js"></script>
+    <script src="../assets/js/bootstrap-dropdown.js"></script>
+    <script src="../assets/js/bootstrap-tab.js"></script>
+    <script src="../assets/js/bootstrap-tooltip.js"></script>
+    <script src="../assets/js/bootstrap-popover.js"></script>
+    <script src="../assets/js/bootstrap-button.js"></script>
+    <script src="../assets/js/bootstrap-collapse.js"></script>
+    <script src="../assets/js/bootstrap-carousel.js"></script>
 
-    <script type="text/javascript" src="assets/js/jquery.autocomplete.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.fitvids.js"></script>
-    <script type="text/javascript" src="assets/js/application.js"></script>
+    <script type="text/javascript" src="../assets/js/jquery.autocomplete.js"></script>
+    <script type="text/javascript" src="../assets/js/jquery.fitvids.js"></script>
+    <script type="text/javascript" src="../assets/js/application.js"></script>
 
-    <script src="assets/js/holder/holder.js"></script>
+    <script src="../assets/js/holder/holder.js"></script>
 
   </body>
 </html>
