--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <ul id="menu" class="nav">
               <li class="active"><a href="index.html">Home</a></li>
               <li><a href="wiki-index.html">Knowledge Base</a></li>
-              <li><a href="faq.html">Faq</a></li>
+              <li><a href="FAQ/faq.html">Faq</a></li>
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
             </ul>
           </div><!--/.nav-collapse -->
