--- a/wiki-index.html
+++ b/wiki-index.html
@@ -48,7 +48,7 @@
             <ul id="menu" class="nav">
               <li><a href="index.html">Home</a></li>
               <li class="active"><a href="wiki-index.html">Knowledge Base</a></li>
-              <li><a href="faq.html">Faq</a></li>
+              <li><a href="FAQ/faq.html">Faq</a></li>
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
             </ul>
           </div><!--/.nav-collapse -->
@@ -92,11 +92,11 @@
                 Abridged RN
               </h2>
               <ul class="category-posts">
-                <li><i class="fas fa-font"></i> <a href="article-spring19.html">Spring 19 Abridged</a></li>               
-                <li><i class="fas fa-font"></i> <a href="article-winter19.html">Winter 19 Abridged</a></li>
-                <li><i class="fas fa-font"></i> <a href="article-summer18.html">Summer 18 Abridged</a></li>
-                <li><i class="fas fa-font"></i> <a href="article-spring18.html">Spring 18 Abridged</a></li>                
-                <li><i class="fas fa-font"></i> <a href="article-winter18.html">Winter 18 Abridged</a></li>                
+                <li><i class="fas fa-font"></i> <a href="AbridgedReleaseNotes/article-spring19.html">Spring 19 Abridged</a></li>               
+                <li><i class="fas fa-font"></i> <a href="AbridgedReleaseNotes/article-winter19.html">Winter 19 Abridged</a></li>
+                <li><i class="fas fa-font"></i> <a href="AbridgedReleaseNotes/article-summer18.html">Summer 18 Abridged</a></li>
+                <li><i class="fas fa-font"></i> <a href="AbridgedReleaseNotes/article-spring18.html">Spring 18 Abridged</a></li>                
+                <li><i class="fas fa-font"></i> <a href="AbridgedReleaseNotes/article-winter18.html">Winter 18 Abridged</a></li>                
               </ul>
             </div>
             <div class="span3">
