Updated the Wiki link.
Swapped the Wiki link to point to the new and improved Wiki.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               </div>
               <div class="box-text">
                 <p>Literally a glorified collection of HTML files. Procrastination is a cruel mistress.<br/>¯\_(ツ)_/¯</p>
-                <a class="btn-black" href="wiki-index.html">Made with love</a>
+                <a class="btn-black" href="https://wiki.sfxd.org/">Made with love</a>
               </div>
             </div>
           </div>
