--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </div>
               <div class="box-text">
                 <p>We're a small but active community, connected every day on Discord. Join us for the Salesforce discussions, stay for the memes.</p>
-                <a class="btn-black" href="https://discordapp.com/invite/JG4Bc4q">Jump in</a>
+                <a class="btn-black" href="https://discord.gg/sfxd">Jump in</a>
               </div>
             </div>
           </div>
